z-index fix in prev commit was in devtools only -_-

--- a/src/styles/components/_messageField.scss
+++ b/src/styles/components/_messageField.scss
@@ -1,4 +1,5 @@
 .messageField {
+    z-index: 1;
     > form {
         display: flex;
         flex: 1;
